# buddy

./: .gitignore  README.md  main.py  pyproject.toml
utils/: cities.geojson  google_utils.py  gps_utils.py  near_restaurants.json  weather_utils.py
