[tool.poetry]
name = "buddy"
version = "0.1.0"
description = ""
authors = ["fooser <fooser@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
geopy = "^2.2.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
